# remtui

./: .gitignore  README.md  install.sh  pyproject.toml
remtui/: __init__.py  __main__.py  app.py  client.py  config.py  dates.py  fake_remctl.py  models.py  remtui.tcss  screens.py  widgets.py
tests/: conftest.py  test_app.py  test_client.py  test_config.py  test_dates.py
