[project]
name = "remtui"
version = "0.1.0"
description = "A beautiful Textual TUI for Apple Reminders, powered by remctl"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.8",
]

[project.scripts]
remtui = "remtui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remtui"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "textual-dev>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
